# football-analytics

./: .gitignore
01_Football_Analytics/: Untitled.ipynb  main.py  pyproject.toml
02_Exploratory_Data_Analysis/: 02_Exploratory_Data_Analysis.ipynb  Plotting_data.ipynb  main.py  player_level_stability.ipynb  pyproject.toml
03_Simple_Linear_Regression/: 03_Simple_Linear_Regression.ipynb  main.py  pyproject.toml
04_Multiple_Regression/: 04_Multiple_Regression.ipynb  main.py  pyproject.toml
tests/: Untitled.ipynb  pyproject.toml
